<resources>
    <string name="app_name">Education Universe</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_inicio">ActivityInicio</string>
    <string name="title_home">Home</string>
    <string name="title_contact">Contact</string>
    <string name="title_video">Videos</string>
    <string name="title_info">Info</string>
    <string name="title_about">About</string>
    <string name="text_subrayado1"><u>Terms of Use</u></string>
    <string name="text_subrayado2"><u>Privacy Policy.</u></string>
    <string name="text_subrayado3"><u>Forgot Password</u></string>
    <string name="title_activity_sesion">ActivitySesion</string>
    <string name="loading"> </string>

    <string name="title_website_detail">Website Detail</string>
    <string name="title_activity_sesion1">ActivitySesion1</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="about4">ACERCA DE</string>
    <string name="about1">Education Universe</string>
    <string name="about2">Combinando una buena selección de productos, precio, diseño, rapidez y conveniencia, hacemos que los momentos que pasas con tu familia y amigos, sean mejores</string>
    <string name="about3">Nos encanta saber de ti, síguenos en nuestras redes sociales:</string>

</resources>
