<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.universe.education.education_univerese_10.FragmentsSesion.FragmentSesionAbout"
    android:background="#1d1d1d">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="80"
                android:layout_height="80"
                android:src="@drawable/img_about"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about4"
                android:textAlignment="center"
                android:textSize="20dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/textView3"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:text="@string/about1"
                android:textAlignment="center"
                android:textSize="30dp"
                android:textStyle="bold"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="140dp"
                android:text="@string/about2"
                android:textAlignment="center"
                android:textSize="17dp"
                android:textStyle="normal"
                android:textColor="#ffffff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="250dp"
                android:text="@string/about3"
                android:textAlignment="center"
                android:textSize="17dp"
                android:textStyle="normal"
                android:textColor="#ffffff"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true">

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/Img_fac"
                    android:layout_margin="5dp"/>

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/Img_ins"
                    android:layout_margin="5dp"/>

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/Img_inl"
                    android:layout_margin="5dp"/>

                <Button
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/Img_twi"
                    android:layout_margin="5dp"/>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
